# inferix

./: README.md  custom_types.py  mcmc.py  nested.py  pyproject.toml
inferix/: __init__.py  __int__.py  base.py  mcmc.py  nested.py  result.py
inferix/samplers/: __init__.py  nss.py  nuts.py  polychord.py
samplers/: nss.py  polychord.py
