[project]
name = "inferix"
version = "0.1.8"
description = "A unified interface for probabilistic inference in JAX + Equinox"
readme = "README.md"
authors = [
    { name = "Gary Allen", email = "gvcallen@gmail.com" }
]
dependencies = [
    "jax",
    "numpy",
    "equinox",
    "jaxtyping",
    "blackjax",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "myst-parser",
    "ghp-import",
    "sphinx-rtd-theme",
    "sphinx-math-dollar",
]

[project.urls]
homepage = "https://github.com/gvcallen/inferix"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ["inferix"]